@@ -14,7 +14,6 @@ Import-Package: javax.xml.bind;version="2.1.0",
  org.restlet.data,
  org.restlet.engine.converter,
  org.restlet.engine.resource,
- org.restlet.ext.xml,
  org.restlet.representation,
  org.restlet.resource,
  org.restlet.service,
