@@ -10,7 +10,6 @@ Import-Package: org.jibx.runtime,
  org.restlet.data,
  org.restlet.engine.converter,
  org.restlet.engine.resource,
- org.restlet.ext.xml,
  org.restlet.representation,
  org.restlet.resource,
  org.restlet.service,
