@@ -1,16 +1,16 @@
-<module id="jibx" excludes="android, gwt" type="integration" package="org.restlet.ext.jibx">
-   <name>Restlet Extension - JiBX</name>
-   <description>
-      Integration with JiBX.
+<module id="jibx" excludes="android, gwt" type="integration"
+	package="org.restlet.ext.jibx">
+	<name>Restlet Extension - JiBX</name>
+	<description>
+		Integration with JiBX.
 	</description>
-   <distributions>
-      <distribution id="classic" />
-      <distribution id="maven" />
-   </distributions>
+	<distributions>
+		<distribution id="classic" />
+		<distribution id="maven" />
+	</distributions>
 
-   <dependencies>
-      <dependency type="library" id="jibx" primary="true" />
-      <dependency type="module" id="core" />
-      <dependency type="module" id="xml" />
-   </dependencies>
+	<dependencies>
+		<dependency type="library" id="jibx" primary="true" />
+		<dependency type="module" id="core" />
+	</dependencies>
 </module>
