@@ -22,13 +22,6 @@
 			<groupId>org.restlet.dev</groupId>
 			<artifactId>org.restlet</artifactId>
 			<version>2.0-SNAPSHOT</version>
-			
-		</dependency>
-		<dependency>
-			<groupId>org.restlet.dev</groupId>
-			<artifactId>org.restlet.ext.xml</artifactId>
-			<version>2.0-SNAPSHOT</version>
-			
 		</dependency>
 	</dependencies>
 </project>
