@@ -28,6 +28,17 @@ Changes log
           Restlet 1.1.
         - Refactored XML extensions to share XPath evaluation logic.
           Added XmlRepresentation#getInputSource() abstract method.
+        - Removed dependency from JAXB and JiBX extensions to the
+          XML extension. JaxbRepresentation and JibxRepresentation 
+          aren't extending XmlRepresentation anymore due to the small
+          added value.
+        - Deprecated JaxbRepresentation#getSaxSource() method and added
+          the getJaxbSource() method instead.
+        - Deprecated JaxbRepresentation#getInputSource() and 
+          JibxRepresentation#getInputSource() methods.
+        - Added TransformRepresentation#toSaxSource(),
+          transform(Source, Result) and write(Result) methods for 
+          easier extension.
     - Enhancements
         - UniformResource#doCatch now extract the cause exception from
           caught ResourceException instance for easier debugging.
